kernel: remove unsupportable code
Since upstream has way different methods, via kprobes/kretprobes/LKM/tracepoints,
cleaning up support for unsupportable code is kind of a must. This simplifies porting
downstream changes, restoring old components, debloat, and makes it easier to maintain
downstream, e.g. avoiding excessive use of conditionals (ifdef hell).

Theres now massive code divergence so this has to be done.
We will restore compatibility to upstream with the next commits.

Signed-off-by: backslashxx <118538522+backslashxx@users.noreply.github.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -6,15 +6,11 @@ $(info -- MDIR: $(MDIR))
 
 .PHONY: all compdb clean
 
-all: check_symbol
+all:
 	make -C $(KDIR) M=$(MDIR) modules
-	./check_symbol kernelsu.ko $(KDIR)/vmlinux
 compdb:
 	python3 $(MDIR)/.vscode/generate_compdb.py -O $(KDIR) $(MDIR)
 clean:
 	make -C $(KDIR) M=$(MDIR) clean
-	rm check_symbol
-check_symbol: tools/check_symbol.c
-	$(CC) tools/check_symbol.c -o check_symbol
 
 # Keep a new line here!! Because someone may append config
