--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -4,19 +4,13 @@ MDIR := $(realpath $(dir $(abspath $(lastword $(MAKEFILE_LIST)))))
 $(info -- KDIR: $(KDIR))
 $(info -- MDIR: $(MDIR))
 
-.PHONY: all compdb clean format
+.PHONY: all compdb clean
 
-all: check_symbol
+all:
 	make -C $(KDIR) M=$(MDIR) modules
-	./check_symbol kernelsu.ko $(KDIR)/vmlinux
 compdb:
 	python3 $(MDIR)/.vscode/generate_compdb.py -O $(KDIR) $(MDIR)
 clean:
 	make -C $(KDIR) M=$(MDIR) clean
-	rm check_symbol
-check_symbol: tools/check_symbol.c
-	$(CC) tools/check_symbol.c -o check_symbol
-format:
-	find . -name "*.c" -o -name "*.h" -print0 | xargs -0 clang-format -i
 
 # Keep a new line here!! Because someone may append config
